fixing dropdown width, caret and text spacing still needs work

--- a/components/ui/Dropdown/Dropdown.module.css
+++ b/components/ui/Dropdown/Dropdown.module.css
@@ -1,8 +1,8 @@
   .dropdown {
     position: relative;
     display: flex;
-    left: 4vw;
-    top: 3.25vh; 
+    left: 5vw;
+    top: 3.5vh; 
     width: fit-content;
   }
   
@@ -10,12 +10,12 @@
     background-color: var(--color-gray-400); 
     color: var(--color-gray-300); /*text*/
     padding: 10px;
-    border-radius: 12px;
+    border-radius: 16px;
     cursor: pointer;
     font-family: inherit;
-    font-size: 34px;
+    font-size: 36px;
     font-weight: 300;
-    width: 130px;
+    width: 160px;
     height: fit-content;
     justify-content: space-between;
     border: none;
